# obj-detector-from-scratch

./: .gitignore  EXPERIMENTS.md  LICENSE  MATH.md  README.md  debug_dataset.py  eval.py  predict.py  pyproject.toml  test_dataset.py  test_evaluate.py  test_loss.py  test_model.py  test_nms.py
notebooks/: exploration.ipynb
src/: dataset.py  evaluate.py  loss.py  model.py  nms.py  train.py
